# OS-File-Manager

./: .gitignore  CMakeLists.txt  os-File-Manager.pro
records/: freeDir.txt  freeDisk.txt  freeIdode.txt  usedDir.txt  usedDisk.txt  usedIdode.txt  user.txt
src/header/: config.h  dir.h  diskblock.h  global.h  header.h  inode.h  superblock.h  system.h  user.h  utils.h  view.h
src/source/: dir.cpp  diskblock.cpp  inode.cpp  main.cpp  superblock.cpp  system.cpp  user.cpp  utils.cpp
src/ui/: loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
